[gd_scene load_steps=8 format=3 uid="uid://oovlm6bd2mb4"]

[ext_resource type="Texture2D" uid="uid://bhy0nn4upx88q" path="res://Assets/Sprites/Characters/Enemies/enemy.png" id="1_2tgbb"]
[ext_resource type="Script" path="res://Entities/Enemy/Enemy.gd" id="1_dmwyb"]
[ext_resource type="Texture2D" uid="uid://c4ujqo17a4nww" path="res://Assets/Sprites/UI/Healthbar/Enemy/healthbar_under.png" id="3_fj0vl"]
[ext_resource type="Texture2D" uid="uid://u0ceilg574kt" path="res://Assets/Sprites/UI/Healthbar/Enemy/healthbar_over.png" id="4_kvimg"]
[ext_resource type="Texture2D" uid="uid://bnfvjousjo8n7" path="res://Assets/Sprites/UI/Healthbar/Enemy/healthbar_fill.png" id="5_35nih"]
[ext_resource type="Theme" uid="uid://b7386eiexi2fi" path="res://Entities/UI/font.tres" id="6_50o3p"]
[ext_resource type="Texture2D" uid="uid://degkl4xaemo05" path="res://Assets/Sprites/Pieces/piece_flesh.png" id="7_bkqqy"]

[node name="Enemy" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 454.0
offset_bottom = 454.0
size_flags_horizontal = 0
script = ExtResource("1_dmwyb")
color = 2
hp = 500

[node name="Sprite" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 454.0
offset_bottom = 454.0
texture = ExtResource("1_2tgbb")
expand_mode = 1
stretch_mode = 2

[node name="HealthBar" type="TextureProgressBar" parent="."]
modulate = Color(0.258824, 0.443137, 0.498039, 1)
texture_filter = 1
layout_mode = 0
offset_left = 22.0
offset_top = 409.0
offset_right = 455.0
offset_bottom = 449.0
step = 0.2
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
texture_under = ExtResource("3_fj0vl")
texture_over = ExtResource("4_kvimg")
texture_progress = ExtResource("5_35nih")

[node name="HealthLabel" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 61.0
offset_top = 411.0
offset_right = 452.0
offset_bottom = 447.0
theme = ExtResource("6_50o3p")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 32
text = "124/123"

[node name="ColorIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 398.0
offset_right = 61.0
offset_bottom = 458.0
texture = ExtResource("7_bkqqy")
expand_mode = 2
